<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.apereo.cas</groupId>
		<artifactId>cas-server-support-bom</artifactId>
		<version>6.0.3</version>
	</parent>
	<groupId>com.centit.framework</groupId>
	<artifactId>centit-cas</artifactId>
	<version>1.3-SNAPSHOT</version>
    <modules>
        <module>centit-cas-login-plugin</module>
        <module>centit-cas-demo</module>
    </modules>
    <packaging>pom</packaging>
	<name>com.centit.framework:centit-cas</name>
	<description>单点登录平台，集成cas-server-webapp，只添加和系统中的用户对接部分代码</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!--<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>-->
		<!--<jdk.version>11</jdk.version>-->
		<spring.ldap.version>2.2.0.RELEASE</spring.ldap.version>
		<centit.commons.version>2.2.1901</centit.commons.version>
		<ojdbc6.version>11.2.0.4</ojdbc6.version>
		<mysql.version>5.1.9</mysql.version>
		<servlet-api.version>3.1.0</servlet-api.version>
	</properties>

	<url>https://github.com/ndxt/centit-cas</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<organization>
		<name>江苏南大先腾信息产业股份有限公司</name>
		<url>www.centit.com</url>
	</organization>

	<developers>
		<developer>
			<name>杨淮生</name>
			<email>codefan@sina.com</email>
			<organization>centit.com</organization>
			<organizationUrl>http://www.centit.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>
			scm:git:https://github.com/ndxt/centit-cas.git
		</connection>
		<developerConnection>
			scm:git:https://github.com/ndxt/centit-cas.git
		</developerConnection>
		<url>https://github.com/ndxt/centit-cas</url>
		<tag>v1.12</tag>
	</scm>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<!--<source>${jdk.version}</source>
                        <target>${jdk.version}</target>-->
						<release>11</release>
						<encoding>UTF-8</encoding>
						<compilerArguments>
							<verbose />
							<bootclasspath>${java.home}/lib/rt.jar;${java.home}/lib/jce.jar</bootclasspath>
						</compilerArguments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M3</version>
					<configuration>
						<skipTests>true</skipTests>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>-->

			<!-- GPG自动签名的插件-->
			<!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>-->

			<!-- sonatype release : mvn nexus-staging:release-->
			<!-- <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.8</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
 -->
		</plugins>
	</build>

</project>
